--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -2,7 +2,8 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <!-- <link rel="icon" href="%PUBLIC_URL%/favicon.ico" /> -->
+    <link rel="icon" href="logo_4.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
@@ -35,7 +36,7 @@
 
       gtag('config', 'G-P2V8J5VDDW');
     </script>
-    <title>React App</title>
+    <title>Nishant Dalal</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
